fixed cloudfoundry badge page

--- a/app/views/content/badges.html.erb
+++ b/app/views/content/badges.html.erb
@@ -717,7 +717,7 @@
             </div>
             <div class="fl">
                 <div class="developSkillbadgeimgdiv">
-                    <a href="challenge_detail.html?contestID=205"><img width="148" height="104" src="http://cloudspokes.s3.amazonaws.com/CloudFoundryApprantice.gif" /></a>
+                    <img width="148" height="104" src="http://cloudspokes.s3.amazonaws.com/CloudFoundryApprantice.gif" />
                 </div>
                 <div class="developSkillbadgetextdiv">
                     <p>
@@ -729,7 +729,7 @@
                 <div class="cl">
                 </div>
                 <div class="developSkillbadgeimgdiv">
-                    <a href="challenge_detail.html?contestID=206"><img width="148" height="104" src="http://cloudspokes.s3.amazonaws.com/CloudFoundryBlackSmith.gif" /></a>
+                    <img width="148" height="104" src="http://cloudspokes.s3.amazonaws.com/CloudFoundryBlackSmith.gif" />
                 </div>
                 <div class="developSkillbadgetextdiv">
                     <p>
@@ -741,7 +741,7 @@
                 <div class="cl">
                 </div>
                 <div class="developSkillbadgeimgdiv">
-                    <a href="challenge_detail.html?contestID=207"><img width="148" height="104" src="http://cloudspokes.s3.amazonaws.com/CloudFoundryJourneyman.gif" /></a>
+                    <img width="148" height="104" src="http://cloudspokes.s3.amazonaws.com/CloudFoundryJourneyman.gif" />
                 </div>
                 <div class="developSkillbadgetextdiv">
                     <p>
