fixed #255054 - with refactorings for #254700

--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -39,7 +39,7 @@
             <div id="search">
                 <fieldset>
 					<form method="get" action="/challenges">
-                    <input type="text" class="field blink" title="search challenges" value="search challenges" name="keyword"/>
+                    <input type="text" class="field blink challenges-search" title="search challenges" value="search challenges" name="keyword"/>
                     <input type="submit" value="" class="submit notext" />
 					</form>
                 </fieldset>
