fixed the cloudspokes signup/signin process

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -234,6 +234,9 @@ a.btn
   margin-right: 25px
   margin-bottom: 15px
 
+.field_with_errors
+  display: inline
+
 .third_party_no_email 
   margin-top: 5px
   margin-bottom: 25px
