--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -20,7 +20,7 @@
                 <fieldset>
 					<%= form_for :search, :url => members_search_path do |f| %>
 					<input type="text" value="search members" onclick="this.value=''" title="search members" class="field blink" name="query">	
-                    <input type="submit" value="go" onclick="alert('clicked')" />
+                    <input class="submit" type="submit" value="go" onclick="alert('clicked')" />
 					<% end %>
                 </fieldset>
             </div>
