--- a/app/views/accounts/details.html.haml
+++ b/app/views/accounts/details.html.haml
@@ -8,7 +8,7 @@
         %h3 Account details
         = flash_messages
         %p
-          Sometimes we need to send you stuff. Like award money. So keep your contact info up to date so we can get in touch! We promise to never ever use your informations for evil (unless we have your permission).
+          Sometimes we need to send you stuff. Like award money. So keep your contact info up to date so we can get in touch! We promise to never ever use your information for evil (unless we have your permission).
         .cl
         = form_tag("/account/details", :name => "form_details")
         %label
