Set maximum width for form fields in the modal window sidebar.

--- a/app/assets/stylesheets/blank.css
+++ b/app/assets/stylesheets/blank.css
@@ -20,6 +20,9 @@ body {
 	float:left;
 	width:230px;
 }
+#sidebar input, #sidebar select, #sidebar textarea {
+  max-width:220px;
+}
 #footer {
 	padding-top: 25px;
 	clear:both;
