--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -130,7 +130,7 @@
 								<% if signed_in? %>
 									<%= form_for :discussion, :url => challenge_comment_path, :name => 'new_comment' do |f| %>
 										<div class="holder">
-										<%= f.text_area( :comments, :cols => "80", :rows => "8" )  %>
+										<%= f.text_area( :comments, :cols => "80", :rows => "8", :value => session[:captcha_comments] )  %>
 										</div>
 										<%= f.hidden_field :reply_to, :value => params[:reply_to] %>
 										<%= recaptcha_tags %>
