fixed a bunch of bugs

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -318,3 +318,24 @@ a.btn
 .fancytable td
   border-bottom: 1px solid #ccc
   padding: 6px 8px
+
+.hint
+  font-size: x-small
+  padding-left: 5px
+  color: #A9A9A9
+
+.field
+  padding-bottom: 8px
+  border: 0px
+
+.field input
+  background: none repeat scroll 0 0 #FFFFFF
+  border: 1px solid #CCCCCC
+  font: 11px Arial,Sans-Serif
+  display: inline
+  font-size: 13px
+  color: #666666
+  height: 20px
+
+.formsubmit
+  padding: 4px
