--- a/app/views/content/badges.html.erb
+++ b/app/views/content/badges.html.erb
@@ -214,7 +214,7 @@
                     awarded for your participation and winning contests with specific technologies.
                 </p>
                 <p>
-                    Scroll over each to see whats in store for you!</p>
+                    Scroll over each to see what's in store for you!</p>
                 <div class="technologyBadgesdiv">
                     <a href="#rolloverPopupForce" id="aForce" rel="aForce" class="techbadgesA">
                         <img border="0" src="http://cloudspokes.s3.amazonaws.com/logo_force.jpg" style="border: 1px solid #000000" /></a>
