--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -63,7 +63,7 @@
 		                        <div class="box-t">
 		                            <div class="col-left fl">
 		                                <h4><%= link_to "#{record["Name"]}", challenge_url(record['ID__c']) %></h4>
-		                                <p><%= truncate(record["Description__c"].gsub(/<\/?[^>]*>/, ""), :length => 300, :separator => ' ') %></p>
+		                                <p><%= raw(truncate(record["Description__c"].gsub(/<\/?[^>]*>/, ""), :length => 300, :separator => ' ')) %></p>
 		                            </div>
 		                            <div class="col-right fr">
 		                                <p>
