--- a/app/views/members/recommend.html.erb
+++ b/app/views/members/recommend.html.erb
@@ -2,17 +2,20 @@
   <div class='widecolumn fl'>
     <p><%= link_to 'Back', member_path %></p>
 	<%= flash_messages %>
-	<div class="post-submission">
-	    <h3>Post a Recommendation</h3>
-	    <fieldset>
-		<%= form_for :recommendation, :url => recommend_member_new_path do |f| %>
-			<div class="holder">
-			<%= f.text_area( :comments )  %>
-			</div>
-			<a class="button fl" onclick="document.forms[0].submit();"> <span>Post</span></a>
-		<% end %>
-	    </fieldset>
-	</div>
+	<% if flash[:error].nil? %>
+		<div class="post-submission">
+		    <h3>Post a Recommendation</h3>
+		    <fieldset>
+			<%= form_for :recommendation, :url => recommend_member_new_path do |f| %>
+				<div class="holder">
+				<%= f.text_area( :comments )  %>
+				</div>
+				<a class="button fl" onclick="document.forms[0].submit();"> <span>Post</span></a>
+			<% end %>
+		    </fieldset>
+		</div>
+	<% end %>
+	</dif>
   </div>
 
 <%= render "member-sidebar" %>
