--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -38,7 +38,7 @@
             <div id="search">
                 <fieldset>
 					<form method="get" action="/challenges">
-                    <input type="text" class="field blink challenges-search" title="search challenges" value="search challenges" name="keyword"/>
+                    <input type="text" class="field blink challenges-search" title="search challenges" value="<% if params[:keyword] %><%= params[:keyword] %><% else %>search challenges<% end %>" name="keyword"/>
                     <input type="submit" value="" class="submit notext" />
 					</form>
                 </fieldset>
