--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -19,9 +19,9 @@
             <div class="sort fl">
                 <ul>
                     <li>SORT BY</li>
-                    <li><%= current_link :orderby, 'name', 'title', :show, :class => 'ddasc', :default => true %></li>
-                    <li><%= current_link :orderby, 'end_date__c', 'due', :show %></li>
-                    <li><%= current_link :orderby, 'start_date__c', 'start date', :show %></li>
+                    <li><%= current_link @current_order_by, @current_order_by_dir, :orderby, 'name', 'title', :show, :default => true %></li>
+                    <li><%= current_link @current_order_by, @current_order_by_dir,:orderby, 'end_date__c', 'due', :show %></li>
+                    <li><%= current_link @current_order_by, @current_order_by_dir,:orderby, 'start_date__c', 'start date', :show %></li>
                 </ul>
             </div>
             <!-- END Sort -->
@@ -29,8 +29,8 @@
             <div class="sort fl">
                 <ul>
                     <li>SHOW</li>
-                    <li><%= current_link :show, 'open', 'open', :orderby, :default => true %></li>
-                    <li><%= current_link :show, 'closed', 'closed', :orderby %></li>
+                    <li><%= current_link '', '', :show, 'open', 'open', :orderby, :default => true %></li>
+                    <li><%= current_link '', '', :show, 'closed', 'closed', :orderby %></li>
                 </ul>
             </div>
             <!-- END Sort -->
