--- a/app/views/members/_member-sidebar.html.haml
+++ b/app/views/members/_member-sidebar.html.haml
@@ -47,6 +47,9 @@
       %li
         = @member["Total_Points__c"]
         %strong Total Points
+      %li
+        = number_to_currency(@member["Total_Money__c"], :precision => 0)
+        %strong Total Money
   .achievements
   %h3 Social
   .socials
