change configs to be uppercase - i am stupid

--- a/app/views/member_mailer/new_challenge_comment.html.erb
+++ b/app/views/member_mailer/new_challenge_comment.html.erb
@@ -11,13 +11,13 @@
 	</tr>
 	</table>
     <p>
-		A new comment has been posted by <a href="http://<%= ENV['omniauth_full_host'] %>/members/<%= @username %>"><%= @username %></a> for this challenge that you are either registered for or watching:
+		A new comment has been posted by <a href="http://<%= ENV['OMNIAUTH_FULL_HOST'] %>/members/<%= @username %>"><%= @username %></a> for this challenge that you are either registered for or watching:
     </p>
 	<blockquote>
 		<em>"<%= @comments %>"</em>
 	</blockquote>
 	<p><br/>
-		You can <a href="http://<%= ENV['omniauth_full_host'] %>/challenges/<%= @challenge_id %>">reply to this comment</a> or <a href="http://<%= ENV['omniauth_full_host'] %>/challenges/<%= @challenge_id %>">view the challenge</a> for more info.
+		You can <a href="http://<%= ENV['OMNIAUTH_FULL_HOST'] %>/challenges/<%= @challenge_id %>">reply to this comment</a> or <a href="http://<%= ENV['OMNIAUTH_FULL_HOST'] %>/challenges/<%= @challenge_id %>">view the challenge</a> for more info.
 	</p>
 	
 	<p><br>Regards,<br/>The CloudSpokes Team<br/><em>...where the rubber meets the code!</em></p>
