--- a/app/views/accounts/scorecard.html.erb
+++ b/app/views/accounts/scorecard.html.erb
@@ -268,7 +268,7 @@ var INPUT_JSON = '{  " {\'Success\':\'True\',\'Message\':\'Query Ran Successfull
 
 <% if @scored %><h1>This scorecard has been scored and is not updateable.</h1><% end %>
 <div id="scorecard"></div>
-<form id="scorecard_form" action="<%= ENV['omniauth_full_host'] %>/account/scorecard_save" method="post">
+<form id="scorecard_form" action="<%= ENV['OMNIAUTH_FULL_HOST'] %>/account/scorecard_save" method="post">
 <input type="hidden" name="set_as_scored" id="hidden_scored" value="">
 <input type="hidden" name="xml" id="hiddenxml" value="">
 <% if !@scored %><a class="button" onClick="doSubmit('false')"><span>Save for Later</span></a><% end %>
