--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -91,8 +91,8 @@
 	                        <%= will_paginate @challenges %>
 	                    </p>
 	                </div>
-	                <a href="contests.rss" class="get-rss fl">Get RSS for thisSet</a>
-	                <div class="cl">&nbsp;</div>
+	                <!-- ><a href="contests.rss" class="get-rss fl">Get RSS for thisSet</a>
+	                <div class="cl">&nbsp;</div> -->
 				<% end %>
             </div>
         </div>
