re-added papertrail

--- a/app/views/member_mailer/new_challenge_comment.html.erb
+++ b/app/views/member_mailer/new_challenge_comment.html.erb
@@ -15,7 +15,8 @@
     </p>
 	<table cellpadding="5" cellspacing="5">
 	<tr>
-		<td><img src="<%= @profile_pic %>" width="100"></a></td>
+		<td>&nbsp;</td>
+		<td><img src="<%= @profile_pic %>" width="75"></a></td>
 		<td><em>"<%= @comments %>"</em></td>
 	</tr>	
 	</table>
