changes for notifications

--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -57,7 +57,7 @@
 						<% else %>
 	 	                   <div>
 		                        <h3><span>Please login to submit for this challenge</span></h3>
-		                        <a class="button fl fancy" href="/login"> <span>Login</span></a>                        
+		                        <a class="button fl fancy" href="/login_popup"> <span>Login</span></a>                        
 		                    </div>
 						<% end %>
 					<% end %>
@@ -137,7 +137,7 @@
 									  <a class="button fl" onclick="document.forms[0].submit();"> <span>Post</span></a>
 									<% end %>
 								<% else %>
-									Please <a href="/login" class="fancy">login</a> to post a comment.
+									Please <a href="/login_popup" class="fancy">login</a> to post a comment.
 								<% end %>
 	                        </fieldset>
 	                    </div>
