--- a/app/views/members/_member-sidebar.html.haml
+++ b/app/views/members/_member-sidebar.html.haml
@@ -23,7 +23,7 @@
           - if signed_in?
             %a{:href => recommend_member_url} Recommend
           - else
-            %a{:href => login_url, :class => 'fancy'} Recommend
+            %a{:href => login_popup_path, :class => 'fancy'} Recommend
       .cl
   %a{:href => "#"}
     %h3 Stats & Achievements
