limited record count

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -3,7 +3,7 @@
     .list-challenges
       = flash_messages
       %h3= pluralize(@active_challenges.size, "active challenge")
-      - @active_challenges[0..2].each do |active_challenge|
+      - @active_challenges.each do |active_challenge|
         = render "challenge", :challenge => active_challenge
 
     .list-challenges
@@ -11,7 +11,7 @@
         %a.fr{:href => "/members/#{@member["Name"]}/past_challenges"}
           See all »
       %h3= pluralize(@past_challenges.size, "past challenge")
-      - @past_challenges.each do |past_challenge|
+      - @past_challenges[0..2].each do |past_challenge|
         = render "challenge", :challenge => past_challenge
 
     .recommendations
