implemented admin function to delete all users in pg

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -6,6 +6,8 @@
 		
 	<p><a href="/admin/display_users">Display users</a> - Displays all users currently in pg.</p>
 	
+	<p><a href="/admin/delete_all_users">Delete all users</a> - This will delete all users from the local PG database which will essentially log everyone off of the site and force them to relogin.</p>
+	
 	<p><a href="/admin/display_settings">Display settings</a> - Displays the settings record with the shared oauth token.</p>
 
 	<p><a href="/admin/send_mail">Test MailChimp service</a> - Tests resque by sending the welcome email to jeffdonthemic.</p>
