--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -105,6 +105,9 @@ nav ul
       padding: 6px 12px
       &:hover
         color: $link-color
+    #profile_pic
+      padding-right: 10px
+      padding-left: 10px
 
 #bottom
   line-height: 40px
