required ssl for non dev

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
       </ul></nav>
       <nav id='side_menu'><ul>
         <li><%= link_to "How it Works", "/about" %></li>
-        <li><%= link_to "Blog", "http://blog.cloudspokes.com/" %></li>
+        <li><%= link_to "Blog", "http://blog.cloudspokes.com" %></li>
         <li><%= link_to "FAQ", "/faq" %></li>
         <% if current_user.nil? %>
 			<li><%= link_to "Login", "/login_popup", :class => "fancy" %></li>
