commented out uploading profile pic

--- a/app/views/accounts/public_profile.html.erb
+++ b/app/views/accounts/public_profile.html.erb
@@ -43,7 +43,7 @@
 					<table>
 					<tr>
 						<td><img src="<%= @account["Profile_Pic__c"]%>" class="profile_pic"></td>
-						<td><%= file_field 'form_profile', 'Profile_Pic__c', :class => 'file' %></td>
+						<td><!--<%= file_field 'form_profile', 'Profile_Pic__c', :class => 'file' %>--></td>
 					</tr>
 					</table>
 				</div>
